--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "express-fileupload": "^1.5.0",
     "express-session": "^1.18.0",
     "express-sessions": "^1.0.6",
+    "google-auth-library": "^9.11.0",
+    "googleapis": "^140.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
