--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
+    "node-telegram-bot-api": "^0.66.0",
     "openai": "^4.52.0",
     "passport": "^0.7.0",
     "session": "^0.1.0",
